--- a/AnalyzeGPX/Views/GpxContentView.xib
+++ b/AnalyzeGPX/Views/GpxContentView.xib
@@ -36,7 +36,7 @@
                                         <tableColumns>
                                             <tableColumn width="257" minWidth="40" maxWidth="1000" id="nmn-Vw-5MH">
                                                 <tableHeaderCell key="headerCell" lineBreakMode="truncatingTail" borderStyle="border" title="Routes">
-                                                    <font key="font" metaFont="label" size="11"/>
+                                                    <font key="font" metaFont="message" size="11"/>
                                                     <color key="textColor" name="headerTextColor" catalog="System" colorSpace="catalog"/>
                                                     <color key="backgroundColor" name="headerColor" catalog="System" colorSpace="catalog"/>
                                                 </tableHeaderCell>
@@ -48,11 +48,11 @@
                                                 <tableColumnResizingMask key="resizingMask" resizeWithTable="YES" userResizable="YES"/>
                                                 <prototypeCellViews>
                                                     <tableCellView identifier="cell" id="zZ6-VP-0FL">
-                                                        <rect key="frame" x="1" y="1" width="257" height="42"/>
+                                                        <rect key="frame" x="1" y="1" width="257" height="17"/>
                                                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                                         <subviews>
                                                             <textField verticalHuggingPriority="750" horizontalCompressionResistancePriority="250" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="5bl-WC-sg2">
-                                                                <rect key="frame" x="0.0" y="25" width="257" height="17"/>
+                                                                <rect key="frame" x="0.0" y="0.0" width="257" height="17"/>
                                                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
                                                                 <textFieldCell key="cell" lineBreakMode="truncatingTail" sendsActionOnEndEditing="YES" title="Table View Cell" id="FY3-1M-lPR">
                                                                     <font key="font" metaFont="system"/>
@@ -119,7 +119,7 @@
                                         <tableColumns>
                                             <tableColumn width="256" minWidth="40" maxWidth="1000" id="fQY-dF-dj8">
                                                 <tableHeaderCell key="headerCell" lineBreakMode="truncatingTail" borderStyle="border" title="Waypoints">
-                                                    <font key="font" metaFont="label" size="11"/>
+                                                    <font key="font" metaFont="message" size="11"/>
                                                     <color key="textColor" name="headerTextColor" catalog="System" colorSpace="catalog"/>
                                                     <color key="backgroundColor" name="headerColor" catalog="System" colorSpace="catalog"/>
                                                 </tableHeaderCell>
@@ -131,11 +131,11 @@
                                                 <tableColumnResizingMask key="resizingMask" resizeWithTable="YES" userResizable="YES"/>
                                                 <prototypeCellViews>
                                                     <tableCellView identifier="cell" id="k6W-lm-KN0">
-                                                        <rect key="frame" x="1" y="1" width="256" height="42"/>
+                                                        <rect key="frame" x="1" y="1" width="256" height="17"/>
                                                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                                         <subviews>
                                                             <textField verticalHuggingPriority="750" horizontalCompressionResistancePriority="250" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="dzu-4E-5ej">
-                                                                <rect key="frame" x="0.0" y="25" width="256" height="17"/>
+                                                                <rect key="frame" x="0.0" y="0.0" width="256" height="17"/>
                                                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
                                                                 <textFieldCell key="cell" lineBreakMode="truncatingTail" sendsActionOnEndEditing="YES" title="Table View Cell" id="TKk-GJ-5i3">
                                                                     <font key="font" metaFont="system"/>
@@ -193,7 +193,7 @@
                                         <tableColumns>
                                             <tableColumn width="256" minWidth="40" maxWidth="1000" id="C5f-M7-7xz">
                                                 <tableHeaderCell key="headerCell" lineBreakMode="truncatingTail" borderStyle="border" title="Tracks">
-                                                    <font key="font" metaFont="label" size="11"/>
+                                                    <font key="font" metaFont="message" size="11"/>
                                                     <color key="textColor" name="headerTextColor" catalog="System" colorSpace="catalog"/>
                                                     <color key="backgroundColor" name="headerColor" catalog="System" colorSpace="catalog"/>
                                                 </tableHeaderCell>
@@ -205,11 +205,11 @@
                                                 <tableColumnResizingMask key="resizingMask" resizeWithTable="YES" userResizable="YES"/>
                                                 <prototypeCellViews>
                                                     <tableCellView identifier="cell" id="rOi-YJ-twZ">
-                                                        <rect key="frame" x="1" y="1" width="256" height="42"/>
+                                                        <rect key="frame" x="1" y="1" width="256" height="17"/>
                                                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                                         <subviews>
                                                             <textField verticalHuggingPriority="750" horizontalCompressionResistancePriority="250" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="mNY-hN-v5x">
-                                                                <rect key="frame" x="0.0" y="25" width="256" height="17"/>
+                                                                <rect key="frame" x="0.0" y="0.0" width="256" height="17"/>
                                                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
                                                                 <textFieldCell key="cell" lineBreakMode="truncatingTail" sendsActionOnEndEditing="YES" title="Table View Cell" id="rEB-X5-NVg">
                                                                     <font key="font" metaFont="system"/>
