--- a/AnalyzeGPX/Views/MainWindow.xib
+++ b/AnalyzeGPX/Views/MainWindow.xib
@@ -18,14 +18,14 @@
         <window title="Analyze Garmin GPX" allowsToolTipsWhenApplicationIsInactive="NO" autorecalculatesKeyViewLoop="NO" releasedWhenClosed="NO" animationBehavior="default" id="QvC-M9-y7g">
             <windowStyleMask key="styleMask" titled="YES" closable="YES" miniaturizable="YES" resizable="YES"/>
             <windowPositionMask key="initialPositionMask" leftStrut="YES" rightStrut="YES" topStrut="YES" bottomStrut="YES"/>
-            <rect key="contentRect" x="335" y="390" width="480" height="360"/>
+            <rect key="contentRect" x="335" y="390" width="1024" height="768"/>
             <rect key="screenRect" x="0.0" y="0.0" width="1440" height="877"/>
             <view key="contentView" id="EiT-Mj-1SZ">
-                <rect key="frame" x="0.0" y="0.0" width="480" height="360"/>
+                <rect key="frame" x="0.0" y="0.0" width="1024" height="768"/>
                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                 <subviews>
                     <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="9oC-br-b3l">
-                        <rect key="frame" x="14" y="13" width="159" height="32"/>
+                        <rect key="frame" x="14" y="13" width="352" height="32"/>
                         <buttonCell key="cell" type="push" title="Open GPX file" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="j1E-hd-uow">
                             <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                             <font key="font" metaFont="system"/>
@@ -35,7 +35,7 @@
                         </connections>
                     </button>
                     <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="dcK-e0-636">
-                        <rect key="frame" x="173" y="13" width="147" height="32"/>
+                        <rect key="frame" x="366" y="13" width="322" height="32"/>
                         <buttonCell key="cell" type="push" title="Load Device" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="Tbf-8c-0pJ">
                             <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                             <font key="font" metaFont="system"/>
@@ -45,7 +45,7 @@
                         </connections>
                     </button>
                     <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="EAp-sD-pRL">
-                        <rect key="frame" x="320" y="13" width="146" height="32"/>
+                        <rect key="frame" x="688" y="13" width="322" height="32"/>
                         <buttonCell key="cell" type="push" title="Exit" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="Euq-EG-qRY">
                             <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                             <font key="font" metaFont="system"/>
@@ -55,25 +55,25 @@
                         </connections>
                     </button>
                     <splitView arrangesAllSubviews="NO" dividerStyle="paneSplitter" vertical="YES" translatesAutoresizingMaskIntoConstraints="NO" id="9Z9-9Y-pFT">
-                        <rect key="frame" x="20" y="61" width="440" height="279"/>
+                        <rect key="frame" x="20" y="61" width="984" height="687"/>
                         <subviews>
                             <scrollView fixedFrame="YES" autohidesScrollers="YES" horizontalLineScroll="44" horizontalPageScroll="10" verticalLineScroll="44" verticalPageScroll="10" usesPredominantAxisScrolling="NO" id="Mrz-JR-c0j" userLabel="FilesOutline  Scroll View">
-                                <rect key="frame" x="0.0" y="0.0" width="140" height="279"/>
+                                <rect key="frame" x="0.0" y="0.0" width="317" height="687"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                 <clipView key="contentView" id="cfr-7g-gbh">
-                                    <rect key="frame" x="1" y="0.0" width="138" height="278"/>
+                                    <rect key="frame" x="1" y="0.0" width="315" height="686"/>
                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                     <subviews>
                                         <outlineView verticalHuggingPriority="750" allowsExpansionToolTips="YES" columnAutoresizingStyle="lastColumnOnly" multipleSelection="NO" autosaveColumns="NO" rowHeight="42" rowSizeStyle="automatic" headerView="Haz-Sz-Jvo" viewBased="YES" indentationPerLevel="16" outlineTableColumn="d8w-Uq-eHO" id="tfj-Qm-1jM" customClass="FilesOutlineView" customModule="AnalyzeGPX" customModuleProvider="target">
-                                            <rect key="frame" x="0.0" y="0.0" width="138" height="253"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="315" height="661"/>
                                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                             <size key="intercellSpacing" width="3" height="2"/>
                                             <color key="backgroundColor" name="controlBackgroundColor" catalog="System" colorSpace="catalog"/>
                                             <color key="gridColor" name="gridColor" catalog="System" colorSpace="catalog"/>
                                             <tableColumns>
-                                                <tableColumn width="135" minWidth="40" maxWidth="1000" id="d8w-Uq-eHO">
+                                                <tableColumn width="312" minWidth="40" maxWidth="1000" id="d8w-Uq-eHO">
                                                     <tableHeaderCell key="headerCell" lineBreakMode="truncatingTail" borderStyle="border" title="GPX Files">
-                                                        <font key="font" metaFont="controlContent" size="11"/>
+                                                        <font key="font" metaFont="message" size="11"/>
                                                         <color key="textColor" name="headerTextColor" catalog="System" colorSpace="catalog"/>
                                                         <color key="backgroundColor" name="headerColor" catalog="System" colorSpace="catalog"/>
                                                     </tableHeaderCell>
@@ -85,11 +85,11 @@
                                                     <tableColumnResizingMask key="resizingMask" resizeWithTable="YES" userResizable="YES"/>
                                                     <prototypeCellViews>
                                                         <tableCellView id="Ngw-EM-H1B">
-                                                            <rect key="frame" x="1" y="1" width="135" height="42"/>
+                                                            <rect key="frame" x="1" y="1" width="312" height="42"/>
                                                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                                             <subviews>
                                                                 <textField verticalHuggingPriority="750" horizontalCompressionResistancePriority="250" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="48d-jm-v9n">
-                                                                    <rect key="frame" x="0.0" y="25" width="135" height="17"/>
+                                                                    <rect key="frame" x="0.0" y="25" width="312" height="17"/>
                                                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
                                                                     <textFieldCell key="cell" lineBreakMode="truncatingTail" sendsActionOnEndEditing="YES" title="Table View Cell" id="tij-bL-CVV">
                                                                         <font key="font" metaFont="system"/>
@@ -120,12 +120,12 @@
                                     <autoresizingMask key="autoresizingMask"/>
                                 </scroller>
                                 <tableHeaderView key="headerView" id="Haz-Sz-Jvo">
-                                    <rect key="frame" x="0.0" y="0.0" width="138" height="25"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="315" height="25"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                 </tableHeaderView>
                             </scrollView>
                             <customView fixedFrame="YES" id="vu8-HU-ITS" userLabel="GPX Content View">
-                                <rect key="frame" x="150" y="0.0" width="290" height="279"/>
+                                <rect key="frame" x="327" y="0.0" width="657" height="687"/>
                                 <autoresizingMask key="autoresizingMask"/>
                             </customView>
                         </subviews>
