--- a/AnalyzeGPX/Views/MainWindow.xib
+++ b/AnalyzeGPX/Views/MainWindow.xib
@@ -71,9 +71,9 @@
                                             <color key="backgroundColor" name="controlBackgroundColor" catalog="System" colorSpace="catalog"/>
                                             <color key="gridColor" name="gridColor" catalog="System" colorSpace="catalog"/>
                                             <tableColumns>
-                                                <tableColumn width="312" minWidth="40" maxWidth="1000" id="d8w-Uq-eHO">
+                                                <tableColumn identifier="name" width="312" minWidth="40" maxWidth="1000" id="d8w-Uq-eHO">
                                                     <tableHeaderCell key="headerCell" lineBreakMode="truncatingTail" borderStyle="border" title="GPX Files">
-                                                        <font key="font" metaFont="message" size="11"/>
+                                                        <font key="font" metaFont="label" size="11"/>
                                                         <color key="textColor" name="headerTextColor" catalog="System" colorSpace="catalog"/>
                                                         <color key="backgroundColor" name="headerColor" catalog="System" colorSpace="catalog"/>
                                                     </tableHeaderCell>
@@ -84,12 +84,12 @@
                                                     </textFieldCell>
                                                     <tableColumnResizingMask key="resizingMask" resizeWithTable="YES" userResizable="YES"/>
                                                     <prototypeCellViews>
-                                                        <tableCellView id="Ngw-EM-H1B">
-                                                            <rect key="frame" x="1" y="1" width="312" height="42"/>
+                                                        <tableCellView identifier="name" id="Ngw-EM-H1B">
+                                                            <rect key="frame" x="1" y="1" width="312" height="17"/>
                                                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                                             <subviews>
                                                                 <textField verticalHuggingPriority="750" horizontalCompressionResistancePriority="250" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="48d-jm-v9n">
-                                                                    <rect key="frame" x="0.0" y="25" width="312" height="17"/>
+                                                                    <rect key="frame" x="0.0" y="0.0" width="312" height="17"/>
                                                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
                                                                     <textFieldCell key="cell" lineBreakMode="truncatingTail" sendsActionOnEndEditing="YES" title="Table View Cell" id="tij-bL-CVV">
                                                                         <font key="font" metaFont="system"/>
