DevicesView: Removed some constraints in favour of autoresizing

--- a/AnalyzeGPX/Views/DevicesView.xib
+++ b/AnalyzeGPX/Views/DevicesView.xib
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="15705" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" customObjectInstantitationMethod="direct">
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="16096" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" customObjectInstantitationMethod="direct">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="15705"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="16096"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -13,17 +13,18 @@
         <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
         <customObject id="-3" userLabel="Application" customClass="NSObject"/>
         <customView id="Hz6-mo-xeY">
-            <rect key="frame" x="0.0" y="0.0" width="480" height="222"/>
-            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+            <rect key="frame" x="0.0" y="0.0" width="480" height="97"/>
+            <autoresizingMask key="autoresizingMask" heightSizable="YES"/>
             <subviews>
-                <scrollView autohidesScrollers="YES" horizontalLineScroll="19" horizontalPageScroll="10" verticalLineScroll="19" verticalPageScroll="10" usesPredominantAxisScrolling="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CC5-hw-KYN">
-                    <rect key="frame" x="0.0" y="0.0" width="480" height="222"/>
-                    <clipView key="contentView" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="VhO-O3-dzx">
-                        <rect key="frame" x="1" y="0.0" width="478" height="221"/>
+                <scrollView autohidesScrollers="YES" horizontalLineScroll="19" horizontalPageScroll="10" verticalLineScroll="19" verticalPageScroll="10" usesPredominantAxisScrolling="NO" id="CC5-hw-KYN">
+                    <rect key="frame" x="0.0" y="25" width="480" height="72"/>
+                    <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                    <clipView key="contentView" translatesAutoresizingMaskIntoConstraints="NO" id="VhO-O3-dzx">
+                        <rect key="frame" x="1" y="0.0" width="478" height="71"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView identifier="deviceListTable" verticalHuggingPriority="750" allowsExpansionToolTips="YES" columnAutoresizingStyle="lastColumnOnly" columnSelection="YES" multipleSelection="NO" autosaveColumns="NO" rowSizeStyle="automatic" headerView="Pgw-AS-DzP" viewBased="YES" id="nAB-YN-2wT" userLabel="DeviceListTableView">
-                                <rect key="frame" x="0.0" y="0.0" width="478" height="196"/>
+                                <rect key="frame" x="0.0" y="0.0" width="478" height="46"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                 <size key="intercellSpacing" width="3" height="2"/>
                                 <color key="backgroundColor" name="controlBackgroundColor" catalog="System" colorSpace="catalog"/>
@@ -31,7 +32,6 @@
                                 <tableColumns>
                                     <tableColumn identifier="Path" width="172" minWidth="40" maxWidth="1000" id="lj9-Wn-rl0">
                                         <tableHeaderCell key="headerCell" lineBreakMode="truncatingTail" borderStyle="border" title="Path">
-                                            <font key="font" metaFont="toolTip"/>
                                             <color key="textColor" name="headerTextColor" catalog="System" colorSpace="catalog"/>
                                             <color key="backgroundColor" name="headerColor" catalog="System" colorSpace="catalog"/>
                                         </tableHeaderCell>
@@ -74,7 +74,6 @@
                                     </tableColumn>
                                     <tableColumn identifier="Name" width="300" minWidth="40" maxWidth="1000" id="q20-lr-rMO">
                                         <tableHeaderCell key="headerCell" lineBreakMode="truncatingTail" borderStyle="border" title="Name">
-                                            <font key="font" metaFont="toolTip"/>
                                             <color key="textColor" name="headerTextColor" catalog="System" colorSpace="catalog"/>
                                             <color key="backgroundColor" name="headerColor" catalog="System" colorSpace="catalog"/>
                                         </tableHeaderCell>
@@ -131,8 +130,6 @@
                 </scrollView>
             </subviews>
             <constraints>
-                <constraint firstAttribute="bottom" secondItem="CC5-hw-KYN" secondAttribute="bottom" id="7p2-EW-v3u"/>
-                <constraint firstItem="CC5-hw-KYN" firstAttribute="top" secondItem="Hz6-mo-xeY" secondAttribute="top" id="NQb-gv-cA9"/>
                 <constraint firstAttribute="trailing" secondItem="CC5-hw-KYN" secondAttribute="trailing" id="c2f-H0-lYW"/>
                 <constraint firstItem="CC5-hw-KYN" firstAttribute="leading" secondItem="Hz6-mo-xeY" secondAttribute="leading" id="tE5-P7-RRT"/>
             </constraints>
